--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="container">
           <h2 class="section-title">Student Projects</h2>
           <div class="project-grid">
-            <!-- Project Card 1 -->
+           
             <div class="project-card" id="project1">
               <img
                 src="assets/images/project1.jpg"
@@ -110,15 +110,14 @@
                 class="project-image"
               />
               <div class="project-details">
-                <h3>Project Title 1</h3>
+                <h3>Team 1 🍔</h3>
                 <p>
-                  A detailed description highlighting the innovative approach to
-                  food scarcity solutions.
+                  Food Access in Indianapolis & through the Boner Center for the elderly/ Songdo or Seoul largely.
                 </p>
               </div>
             </div>
 
-            <!-- Project Card 2 -->
+           
             <div class="project-card" id="project2">
               <img
                 src="assets/images/project2.jpg"
@@ -126,94 +125,90 @@
                 class="project-image"
               />
               <div class="project-details">
-                <h3>Project Title 2</h3>
+                <h3>Team 2 🍽️</h3>
                 <p>
-                  An interactive project that tackles elderly health with
-                  creative and engaging designs.
+                  Focused on food nutrition, diet/amount for the day–What makes up a balanced diet for the elderly? 
                 </p>
               </div>
             </div>
-            <div class="project-card" id="project2">
+            <div class="project-card" id="project3">
+              <img
+                src="assets/images/realworldimage.jpg"
+                alt="Project 2"
+                class="project-image"
+              />
+              <div class="project-details">
+                <h3>Team 3 🩸</h3>
+                <p>
+                  Impact of Diet on Blood Pressure and Cardiovascular Health/How does blood pressure relate to diet?
+                </p>
+              </div>
+            </div>
+            <div class="project-card" id="project4">
               <img
                 src="assets/images/project2.jpg"
                 alt="Project 2"
                 class="project-image"
               />
               <div class="project-details">
-                <h3>Project Title 2</h3>
+                <h3>Team 4 📖</h3>
                 <p>
-                  An interactive project that tackles elderly health with
-                  creative and engaging designs.
+                  Meal Planning for Seniors with Chronic Conditions 
                 </p>
               </div>
             </div>
-            <div class="project-card" id="project2">
+            <div class="project-card" id="project5">
               <img
                 src="assets/images/project2.jpg"
                 alt="Project 2"
                 class="project-image"
               />
               <div class="project-details">
-                <h3>Project Title 2</h3>
+                <h3>Team 5 💦</h3>
                 <p>
-                  An interactive project that tackles elderly health with
-                  creative and engaging designs.
+                  Importance of Hydration for the Elderly 
+
                 </p>
               </div>
             </div>
-            <div class="project-card" id="project2">
+            <div class="project-card" id="project6">
               <img
                 src="assets/images/project2.jpg"
                 alt="Project 2"
                 class="project-image"
               />
               <div class="project-details">
-                <h3>Project Title 2</h3>
+                <h3>Team 6 💪</h3>
                 <p>
-                  An interactive project that tackles elderly health with
-                  creative and engaging designs.
+                  Exercise and Food Synergy 
                 </p>
               </div>
             </div>
-            <div class="project-card" id="project2">
+            <div class="project-card" id="project7">
               <img
                 src="assets/images/project2.jpg"
                 alt="Project 2"
                 class="project-image"
               />
               <div class="project-details">
-                <h3>Project Title 2</h3>
+                <h3>Team 7 🧠</h3>
                 <p>
-                  An interactive project that tackles elderly health with
-                  creative and engaging designs.
+                  Understanding Food Insecurity and Mental Health in the Elderly 
+
                 </p>
               </div>
             </div>
-            <div class="project-card" id="project2">
-              <img
-                src="assets/images/project2.jpg"
-                alt="Project 2"
-                class="project-image"
-              />
-              <div class="project-details">
-                <h3>Project Title 2</h3>
-                <p>
-                  An interactive project that tackles elderly health with
-                  creative and engaging designs.
-                </p>
-              </div>
-            </div>
-            <div class="project-card" id="project1">
+            <div class="project-card" id="project8">
               <img
                 src="assets/images/project1.jpg"
                 alt="Project 1"
                 class="project-image"
               />
               <div class="project-details">
-                <h3>Project Title 1</h3>
+                <h3>Team 8 🥒</h3>
                 <p>
-                  A detailed description highlighting the innovative approach to
-                  food scarcity solutions.
+                  The Role of Fiber in Senior Health
+
                 </p>
               </div>
             </div>
@@ -236,8 +231,13 @@
               class="project-image"
             />
             <p id="project-members">Group Members:</p>
+            <p id="project-type">Project Type</p>
             <p id="project-description">Description of the project.</p>
-          </div>
+            <div id="project-behance">
+              <button>
+                <a href="" target="_blank" rel="noopener noreferrer">Design Info</a>
+              </button>
+            </div>
         </div>
         <button id="go-back" class="GB">Go Back</button>
       </section>
