fixed home pae layout and added content

--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
     />
+    <link rel="stylesheet" href="https://use.typekit.net/ske0puo.css" />
     <link
       rel="icon"
       type="image/png"
@@ -36,49 +39,19 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
-    <header class="header">
-      <nav class="navbar">
-        <div class="container">
-          <a href="#home" class="logo">Yonsei x Herron </a>
-          <ul class="nav-links">
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-          <div class="menu-toggle" id="mobile-menu">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-          </div>
-        </div>
-      </nav>
-
-      <div class="hero">
-        <div class="hero-overlay"></div>
-        <div class="hero-content">
-          <h1 class="header-title">
-            Herron School of Art and Design x Yonsei University 2024
-          </h1>
-          <p class="header-subtitle">
-            Explore the collaboration between Yonsei and IU Indy
-          </p>
-        </div>
-
-        <!-- Floating Logos -->
-        <div class="floating-logos">
-          <img
-            src="assets/images/iu-logo.png"
-            alt="IU Indy Logo"
-            class="logo-iu"
-          />
-          <img
-            src="assets/images/yonsei-logo.png"
-            alt="Yonsei University Logo"
-            class="logo-yonsei"
-          />
-        </div>
+    <nav class="navbar">
+      <a href="#home" class="logo">Design for Dignity</a>
+      <ul class="nav-links">
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+      <div class="menu-toggle" id="mobile-menu">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
       </div>
-    </header>
+    </nav>
 
     <main>
       <div id="app"></div>
