halfway though projects data

--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -84,7 +84,7 @@
 
 <section id="food-insecurity" class="food-insecurity-section">
   <div class="container">
-    <h2 class="section-title">Food Insecurity in Indiana & Korea</h2>
+    <h2 class="section-title">Map of Food Insecurity</h2>
     <p>
       Food insecurity affects vulnerable populations across Indiana and Korea,
       particularly the elderly and underserved communities. By focusing on these
@@ -100,10 +100,10 @@
   </div>
 </section>
 
-<section id="project-collaboration" class="project-collaboration-section">
-  <div class="container">
-    <h2 class="section-title">About the Collaboration</h2>
+
+<div class="container2">
     <div class="about-content">
+      <h2 class="section-title">About the Collaboration</h2>
       <div class="text-content">
         <p>
           Yonsei University and Herron School of Art + Design students united to
@@ -120,10 +120,15 @@
           storytelling.
         </p>
       </div>
-      <div class="collab"></div>
+      <a href="#projects" class="seeMore">
+        See their Projects <i class="fa-solid fa-arrow-right"></i>
+      </a>
     </div>
-  </div>
-</section>
+    <div class="aboutCollabImg"></div>
+
+    
+</div>
+
 
 <script>
   function initMap() {
