--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -1,4 +1,4 @@
-<div class="hero">
+<div class="hero1">
   <div class="hero-overlay"></div>
   <div class="hero-content">
     <h1 class="header-title">Design for Dignity</h1>
