--- a/assets/pages/projects.html
+++ b/assets/pages/projects.html
@@ -1,143 +1,101 @@
-<section id="projects" class="projects-section">
-    <div class="container">
-      <h2 class="section-title">Student Projects</h2>
-      <div class="project-grid">
-       
-        <div class="project-card" id="project1">
-          <img
-            src="assets/images/project1.jpg"
-            alt="Project 1"
-            class="project-image"
-          />
-          <div class="project-details">
-            <h3>Team 1 🍔</h3>
-            <p>
-              Food Access in Indianapolis & through the Boner Center for the elderly/ Songdo or Seoul largely.
-            </p>
-          </div>
-        </div>
+<div class="hero">
+  <div class="hero__image">
+    <div class="hero__image--overlay"></div>
+    <div class="hero__child hero__child--primary animation--floating"></div>
+    <div class="hero__child hero__child--secondary animation--floating"></div>
+    <p class="hero__title animation--title-in">Projects</p>
+    <p class="hero__subtitle animation--title-in">
+      by the students of Yonsei University & Herron School of Art & Design
+    </p>
+  </div>
+</div>
 
-       
-        <div class="project-card" id="project2">
-          <img
-            src="assets/images/project2.jpg"
-            alt="Project 2"
-            class="project-image"
-          />
-          <div class="project-details">
-            <h3>Team 2 🍽️</h3>
-            <p>
-              Focused on food nutrition, diet/amount for the day–What makes up a balanced diet for the elderly? 
-            </p>
-          </div>
-        </div>
-        <div class="project-card" id="project3">
-          <img
-            src="assets/images/realworldimage.jpg"
-            alt="Project 2"
-            class="project-image"
-          />
-          <div class="project-details">
-            <h3>Team 3 🩸</h3>
-            <p>
-              Impact of Diet on Blood Pressure and Cardiovascular Health/How does blood pressure relate to diet?
-            </p>
-          </div>
-        </div>
-        <div class="project-card" id="project4">
-          <img
-            src="assets/images/project2.jpg"
-            alt="Project 2"
-            class="project-image"
-          />
-          <div class="project-details">
-            <h3>Team 4 📖</h3>
-            <p>
-              Meal Planning for Seniors with Chronic Conditions 
-            </p>
-          </div>
-        </div>
-        <div class="project-card" id="project5">
-          <img
-            src="assets/images/project2.jpg"
-            alt="Project 2"
-            class="project-image"
-          />
-          <div class="project-details">
-            <h3>Team 5 💦</h3>
-            <p>
-              Importance of Hydration for the Elderly 
-
-            </p>
-          </div>
-        </div>
-        <div class="project-card" id="project6">
-          <img
-            src="assets/images/project2.jpg"
-            alt="Project 2"
-            class="project-image"
-          />
-          <div class="project-details">
-            <h3>Team 6 💪</h3>
-            <p>
-              Exercise and Food Synergy 
-            </p>
-          </div>
-        </div>
-        <div class="project-card" id="project7">
-          <img
-            src="assets/images/project2.jpg"
-            alt="Project 2"
-            class="project-image"
-          />
-          <div class="project-details">
-            <h3>Team 7 🧠</h3>
-            <p>
-              Understanding Food Insecurity and Mental Health in the Elderly 
-
-            </p>
-          </div>
-        </div>
-        <div class="project-card" id="project8">
-          <img
-            src="assets/images/project1.jpg"
-            alt="Project 1"
-            class="project-image"
-          />
-          <div class="project-details">
-            <h3>Team 8 🥒</h3>
-            <p>
-              The Role of Fiber in Senior Health
-
-            </p>
-          </div>
-        </div>
+<div class="projects" id="projects">
+  <div class="project-card">
+    <a href="#project1">
+      <div class="project-image"></div>
+      <div class="project-details">
+        <h3>Team 1 🍔</h3>
+        <p>
+          Food Access in Indianapolis & through the Boner Center for the
+          elderly/ Songdo or Seoul largely.
+        </p>
       </div>
-    </div>
-  </section>
+    </a>
+  </div>
 
-  <section
-    id="project-details"
-    class="project-details-section"
-    style="display: none"
-  >
-    <div class="container">
-      <h2 id="project-title">Project Title</h2>
-      <div class="project-details-content">
-        <img
-          id="project-image"
-          src=""
-          alt="Project Image"
-          class="project-image"
-        />
-        <p id="project-members">Group Members:</p>
-        <p id="project-type">Project Type</p>
-        <p id="project-description">Description of the project.</p>
-        <div id="project-behance">
-          <button>
-            <a href="" target="_blank" rel="noopener noreferrer">Design Info</a>
-          </button>
-        </div>
-    </div>
-    <button id="go-back" class="GB">Go Back</button>
-  </section>
+  <div class="project-card">
+    <a href="#project2">
+      <div class="project-image2"></div>
+      <div class="project-details">
+        <h3>Team 2 🍽️</h3>
+        <p>
+          Focused on food nutrition, diet/amount for the day–What makes up a
+          balanced diet for the elderly? 
+        </p>
+      </div>
+    </a>
+  </div>
+
+  <div class="project-card">
+    <a href="#project3">
+      <div class="project-image3"></div>
+      <div class="project-details">
+        <h3>Team 3 🩸</h3>
+        <p>
+          Impact of Diet on Blood Pressure and Cardiovascular Health/How does
+          blood pressure relate to diet?
+        </p>
+      </div>
+    </a>
+  </div>
+
+  <div class="project-card">
+    <a href="#project4">
+      <div class="project-image4"></div>
+      <div class="project-details">
+        <h3>Team 4 📖</h3>
+        <p>Meal Planning for Seniors with Chronic Conditions.</p>
+      </div>
+    </a>
+  </div>
+
+  <div class="project-card">
+    <a href="#project5">
+      <div class="project-image5"></div>
+      <div class="project-details">
+        <h3>Team 5 💦</h3>
+        <p>Importance of Hydration for the Elderly!</p>
+      </div>
+    </a>
+  </div>
+
+  <div class="project-card">
+    <a href="#project6">
+      <div class="project-image6"></div>
+      <div class="project-details">
+        <h3>Team 6 💪</h3>
+        <p>Exercise and Food Synergy.</p>
+      </div>
+    </a>
+  </div>
+
+  <div class="project-card">
+    <a href="#project7">
+      <div class="project-image7"></div>
+      <div class="project-details">
+        <h3>Team 7 🧠</h3>
+        <p>Understanding Food Insecurity and Mental Health in the Elderly.</p>
+      </div>
+    </a>
+  </div>
+  <div class="project-card">
+    <a href="#project8">
+      <div class="project-image8"></div>
+      <div class="project-details">
+        <h3>Team 8 🥒</h3>
+        <p>The Role of Fiber in Senior Health</p>
+      </div>
+    </a>
+  </div>
+</div>
